--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -19,7 +19,7 @@
         android:id="@+id/notificationsFragment"
         android:enabled="true"
         android:icon="@drawable/ic_notifications_white_24dp"
-        android:title="Karte"
+        android:title="Nachrichten"
         app:showAsAction="always"/>
 
     <item
