--- a/app/src/main/res/menu/user_profile_top_app_bar.xml
+++ b/app/src/main/res/menu/user_profile_top_app_bar.xml
@@ -1,12 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/back"
-        android:icon="@drawable/ic_logout_white_24dp_1_"
-        android:title="@string/logout"
-        app:showAsAction="always" />
-
-
-</menu>
+    xmlns:app="http://schemas.android.com/apk/res-auto"/>
