--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -63,11 +63,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
-                        android:drawableTop="@drawable/ic_baseline_access_time_24"
                         android:hint="@string/choose_takeout_time"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:drawableTopCompat="@drawable/ic_baseline_access_time_24" />
 
                     <LinearLayout
                         android:id="@+id/cart_linearLayout"
