--- a/app/src/main/res/layout/restaurant_overview.xml
+++ b/app/src/main/res/layout/restaurant_overview.xml
@@ -39,133 +39,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <GridLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/r_overview_discount_card"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:clickable="true"
-                            android:elevation="2dp"
-                            android:focusable="true">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:id="@+id/product_pic"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="194dp"
-                                    android:scaleType="centerCrop"
-                                    app:srcCompat="@drawable/dice_2" />
-
-                                <TextView
-                                    android:id="@+id/r_overview_restaurant"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/restaurant_name"
-                                    android:textStyle="bold" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Angebot"
-                                    android:textStyle="bold" />
-
-                            </LinearLayout>
-
-
-                        </com.google.android.material.card.MaterialCardView>
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/r_overview_card2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:clickable="true"
-                            android:elevation="2dp"
-                            android:focusable="true">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="194dp"
-                                    android:scaleType="centerCrop"
-                                    app:srcCompat="@drawable/dice_2" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/restaurant_name"
-                                    android:textStyle="bold"></TextView>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Angebot"
-                                    android:textStyle="bold"></TextView>
-
-                            </LinearLayout>
-
-
-                        </com.google.android.material.card.MaterialCardView>
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/r_overview_card3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:clickable="true"
-                            android:elevation="2dp"
-                            android:focusable="true">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="194dp"
-                                    android:scaleType="centerCrop"
-                                    app:srcCompat="@drawable/dice_2" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/restaurant_name"
-                                    android:textStyle="bold"></TextView>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Angebot"
-                                    android:textStyle="bold"></TextView>
-
-                            </LinearLayout>
-
-
-                        </com.google.android.material.card.MaterialCardView>
-
-                    </GridLayout>
-
-                </HorizontalScrollView>
 
                 <ListView
                     android:layout_width="match_parent"
@@ -174,7 +47,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
-                    ></ListView>
+                    </ListView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
