--- a/app/src/main/res/layout/product_profile.xml
+++ b/app/src/main/res/layout/product_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -10,12 +10,12 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/product_profile_topAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/product_name"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:menu="@menu/product_profile_top_app_bar"/>
+            app:menu="@menu/product_profile_top_app_bar"
+            app:title="@string/product_name" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -24,7 +24,8 @@
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -35,10 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/p_profile_description_card">
+                android:layout_marginEnd="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -47,8 +45,8 @@
 
                     <ImageView
                         android:id="@+id/product_pic"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:src="@drawable/dice_2" />
 
                     <LinearLayout
@@ -65,8 +63,8 @@
                             android:text="@string/product_name"
                             android:textAllCaps="true"
                             android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:textSize="20dp"/>
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/p_profile_price"
@@ -75,75 +73,38 @@
                             android:padding="4dp"
                             android:text="@string/price"
                             android:textColor="@color/black"
-                            android:textSize="20dp"/>
+                            android:textSize="20dp" />
 
-                        <LinearLayout
-                            android:layout_marginTop="30dp"
+                        <TextView
+                            android:id="@+id/p_profile_description"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_gravity="center"
-                            android:gravity="center">
+                            android:padding="4dp"
+                            android:text="Beschreibung"
+                            android:textStyle="bold" />
 
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/p_profile_btn_plus"
-                                style="@style/Widget.AppTheme.Button.IconButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:icon="@drawable/ic_baseline_add_circle_24"/>
-
-                            <TextView
-                                android:id="@+id/p_profile_product_quantity"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/quantity_number"
-                                android:textSize="17dp"/>
-
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/p_profile_btn_minus"
-                                style="@style/Widget.AppTheme.Button.IconButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:icon="@drawable/ic_remove_circle_white_24dp" />
-
-                        </LinearLayout>
-
-                        <com.google.android.material.button.MaterialButton
-                            android:layout_marginTop="35dp"
-                            android:id="@+id/p_profile_addToCart_btn"
-                            android:padding="8dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:icon="@drawable/ic_add_shopping_cart_white_24dp"
-                            android:text="@string/add_to_cart"/>
 
                     </LinearLayout>
 
                 </LinearLayout>
 
+
             </com.google.android.material.card.MaterialCardView>
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/p_profile_description_card"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/p_profile_addToCart_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/p_profile_product_card">
+                android:padding="8dp"
+                android:text="@string/add_to_cart"
+                app:icon="@drawable/ic_add_shopping_cart_white_24dp"
+                />
 
-                <TextView
-                    android:id="@+id/p_profile_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Beschreibung"
-                    android:textStyle="bold"/>
 
-            </com.google.android.material.card.MaterialCardView>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
