--- a/app/src/main/res/layout/restaurant_profile.xml
+++ b/app/src/main/res/layout/restaurant_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -8,13 +9,16 @@
             type="com.groupthree.safeorder.database.RestaurantViewModel" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar_restaurantoverview"
@@ -27,10 +31,20 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <!-- Note: A RecyclerView can also be used -->
-        <androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_marginTop="55dp"
+            android:layout_marginBottom="55dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -83,205 +97,15 @@
 
                 </com.google.android.material.card.MaterialCardView>
 
-                <GridLayout xmlns:tools="http://schemas.android.com/tools"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/productRecyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:columnCount="2">
+                    android:layout_height="match_parent" />
 
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/r_profile_product_card"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:clickable="true"
-                        android:elevation="2dp"
-                        android:focusable="true"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <!-- Media -->
-                            <ImageView
-                                android:id="@+id/product_pic"
-                                android:layout_width="match_parent"
-                                android:layout_height="194dp"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                app:srcCompat="@drawable/dice_2" />
-                            <!-- android:contentDescription="@string/content_description_media" -->
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:padding="16dp">
-
-                                <!-- Title, secondary and supporting text -->
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/product_name"
-                                    android:textAppearance="?attr/textAppearanceHeadline6"
-                                    android:paddingEnd="15dp" />
-
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </com.google.android.material.card.MaterialCardView>
-
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/r_profile_card3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:clickable="true"
-                        android:elevation="2dp"
-                        android:focusable="true"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <!-- Media -->
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="194dp"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                app:srcCompat="@drawable/dice_2" />
-                            <!-- android:contentDescription="@string/content_description_media" -->
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:padding="16dp">
-
-                                <!-- Title, secondary and supporting text -->
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/product_name"
-                                    android:textAppearance="?attr/textAppearanceHeadline6"
-                                    android:paddingEnd="15dp" />
-
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </com.google.android.material.card.MaterialCardView>
-
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/r_profile_card4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:clickable="true"
-                        android:elevation="2dp"
-                        android:focusable="true"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <!-- Media -->
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="194dp"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                app:srcCompat="@drawable/dice_2" />
-                            <!-- android:contentDescription="@string/content_description_media" -->
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:padding="16dp">
-
-                                <!-- Title, secondary and supporting text -->
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/product_name"
-                                    android:textAppearance="?attr/textAppearanceHeadline6"
-                                    android:paddingEnd="15dp" />
-
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </com.google.android.material.card.MaterialCardView>
-
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/r_profile_card5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:clickable="true"
-                        android:elevation="2dp"
-                        android:focusable="true"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <!-- Media -->
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="194dp"
-                                android:contentDescription="TODO"
-                                android:scaleType="centerCrop"
-                                app:srcCompat="@drawable/dice_2" />
-                            <!-- android:contentDescription="@string/content_description_media" -->
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:padding="16dp">
-
-                                <!-- Title, secondary and supporting text -->
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="@string/product_name"
-                                    android:textAppearance="?attr/textAppearanceHeadline6"
-                                    android:paddingEnd="15dp" />
-
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </com.google.android.material.card.MaterialCardView>
-
-                </GridLayout>
 
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
