--- a/app/src/main/res/layout/cart_card.xml
+++ b/app/src/main/res/layout/cart_card.xml
@@ -25,12 +25,12 @@
 
         <TextView
             android:id="@+id/cart_product_price"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
+            android:gravity="right"
+        android:layout_gravity="center_vertical"
             android:text="@string/price"
-            android:layout_marginStart="250dp"/>
+           />
 
     </LinearLayout>
 
