--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -17,13 +17,6 @@
         android:menuCategory="secondary"
         app:showAsAction="always"/>
 
-    <item
-        android:id="@+id/notificationsFragment"
-        android:enabled="true"
-        android:icon="@drawable/ic_notifications_white_24dp"
-        android:title="Karte"
-        android:menuCategory="secondary"
-        app:showAsAction="always"/>
 
     <item
         android:id="@+id/cartFragment"
@@ -34,7 +27,7 @@
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/userProfileGraph"
+        android:id="@+id/userProfileFragment"
         android:enabled="true"
         android:icon="@drawable/ic_person_white_24dp"
         android:title="@string/user"
