--- a/app/src/main/res/menu/restaurant_overview_top_app_bar.xml
+++ b/app/src/main/res/menu/restaurant_overview_top_app_bar.xml
@@ -2,4 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/logout_btn"
+        android:title="@string/logout"
+        android:icon="@drawable/ic_logout_white_24dp_1_"
+        app:showAsAction="always"/>
+
 </menu>
